--- a/styles/main.css
+++ b/styles/main.css
@@ -2,10 +2,22 @@
     font-family: Arial, Helvetica, sans-serif;
     box-sizing: border-box;
 }
-body{
+html, body {
+    max-width: 100%;
+    overflow-x: hidden;
     margin:0;
 }
+.container{
+    width: 100dvw;
+    top:0;
+    position: absolute;
+    padding:0;
+}
 @media only screen and (max-width: 51em) {
+    .logo img{
+        padding:0;
+        margin: 0 !important;
+    }
     .hero-img{
        position: absolute;
        top:5rem;
@@ -44,6 +56,25 @@ body{
 -webkit-box-shadow: 0px 0px 10px 1px rgba(0,0,0,0.5);
 -moz-box-shadow: 0px 0px 10px 1px rgba(0,0,0,0.5); */
     }
+    #services{
+        margin-top: 5vh;
+    }
+
+    .block-img{
+        width: 100%;
+        height: 100%;
+        margin: 0;
+       padding:0;
+    }
+    .block-img img{
+        width:100%;
+        margin:0;
+        padding:0;
+    }
+    .block-text{
+        height: 200px;
+    }
+    
 }
 @keyframes slideRight {
     0% {
@@ -92,7 +123,7 @@ body{
 }
 #nav {
     margin:0;
-    width: 100%;
+    width: 100dvw;
     height: 5rem;
     position: fixed;
     top:0;
@@ -103,10 +134,6 @@ body{
     box-shadow: 0px 0px 10px 1px rgba(0,0,0,0.5);
 -webkit-box-shadow: 0px 0px 10px 1px rgba(0,0,0,0.5);
 -moz-box-shadow: 0px 0px 10px 1px rgba(0,0,0,0.5);
-    
-}
-
-.nav-items{
     
 }
 
@@ -151,7 +178,7 @@ a{
     color:white;
     background-color: #e25812;
     border:none;
-    margin:2vh
+    margin:2vh;
 }
 .btn:hover{
     opacity: .75;
@@ -165,7 +192,7 @@ a{
    position: absolute;
    width: 100%;
    display: block;
-
+   margin:0;
 }
 .logo{
     height: 5rem;
@@ -202,11 +229,12 @@ a{
 }
 
 .footer{
-    width: 100%;
+    width: 100dvw;
     display: flex;
     color:white;
     background: #000;
     flex-direction: row; 
+    flex-wrap: wrap-reverse;
 }
 .footer-logo{
     width:100px;
@@ -279,8 +307,8 @@ a{
     display: flex;
     flex-direction: row;
     flex-wrap: wrap;
-    height: 50vh;
     width: 100%;
+   
     
 }
 .left{
@@ -288,7 +316,7 @@ a{
     display: flex;
     align-items: center;
     text-align: center;
-    padding:2vh;
+
     
     width: 100%;
     @media screen and (min-width:48em) {
@@ -300,7 +328,7 @@ a{
     display: flex;
     align-items: center;
     text-align: center;
-    padding:2vh;
+    
     margin:0;
     float:right;
     
@@ -311,6 +339,21 @@ a{
     .right,.left{
         width: 50%;
     }
+    .block{
+        height: 500px;
+    }
+    .block-img{
+        padding: 0;
+        margin: 0;
+        height: 100%;
+        overflow: hidden;
+
+    }
+    .block-img img{
+        margin:0;
+        width: 100%;
+    }
+
 }
 
 
@@ -320,12 +363,16 @@ a{
 }
 
 .block-img{
-    min-width: 500px;
 }
 .block-text{
     background: #115caa;
-
+    text-align: center;
     color:white;
+}
+
+.block-text * {
+    text-align: center;
+    width: 100%;
 }
 
 
@@ -356,6 +403,9 @@ a{
     border-radius: 10px;
 }
 
-
+.wrap-reverse{
+    display: flex;
+    flex-wrap: wrap-reverse;
+}
 
 
